--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.14",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
