--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.20.0",
     "@tanstack/react-query": "^5.59.14",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "dayjs": "^1.11.13",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
