--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "dayjs": "^1.11.13",
-    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
