--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.4",
     "@mui/x-date-pickers": "^7.20.0",
     "@tanstack/react-query": "^5.59.14",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "dayjs": "^1.11.13",
@@ -25,9 +26,8 @@
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "prettier": "^3.3.3",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@eslint/js": "^9.11.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -35,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
