--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write"
+    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
+    "reinstall": "rm -rf node_modules && yarn cache clean && yarn"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.1.4",
+    "@mui/system": "^6.4.3",
     "@mui/x-date-pickers": "^7.27.0",
     "@tanstack/react-query": "^5.59.14",
     "@vercel/analytics": "^1.5.0",
